--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "author": "sean freeman",
   "license": "ISC",
+  "typings": "./index.d.ts",
   "bugs": {
     "url": "https://github.com/TheUIMaster/get-set-react/issues"
   },
