--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["./index.d.ts"],
+    "declaration": true
   }
 }
